# Data_Validation

./: .gitignore  Candidate_extraction.py  README.md  codebook_rule.py  data_validation.py  logic_judgment.py  pyproject.toml  rule_schema.py  schema.json  schema.py  skip_blocks_for_llm.txt  test_llm.py  v_cart.py
data/: (STI)_(설문지)_부산연구원_2025년 부산 청년패널조사_250623_상.hwp  (STI)_(설문지)_클라우드컴퓨팅 교육수료 후 성과관리_하.hwp  (STI)_(설문지)_한국생산기술연구원_양산시 전략산업 육성 개발 기초자료 확보를 위한 산업단지 기업현황 및 수요조사_260112_최종_중.hwp  test.xlsx  test_hwp.hwp  validation_cart.xlsx  가족보호자_임종기돌봄 설문지(최종)_심층인터뷰 추가_중.hwp  계약의사_임종기돌봄 설문지(최종)_하.hwp  요양시설_임종기돌봄 설문지(최종)_주관식 추가_중상.hwp
output/: validation_cart.xlsx  가족보호자_하.txt  가족보호자schema.json  계약의사_하.txt  계약의사_하_schema.json  부산연구원_상.txt  부산연구원_상_schema.json  요양시설_중상.txt  요양시설_중상_schema.json  클라우드컴퓨팅_하.txt  클라우드컴퓨팅_하_schema.json  한국생산기술연구원_중.txt  한국생산기술연구원_중_schema.json
utils/: candidate.py  digpdf_text.py  doc.py  excel_save.py  hwp_hwpx.py  hwp_md.py  hwp_pdf.py  hwp_text.py  hwp_word.py  langchainpdf_txt.py  llm.py  mineru.py  parser.py  pdf_ocr_text.py  pdf_text.py
