[project]
name = "data-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.7",
    "olefile>=0.47",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "pyhwpx>=1.6.6",
    "pywin32>=311",
]
