[project]
name = "data-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "docling==2.72.0",
    "dotenv>=0.9.9",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.7",
    "olefile>=0.47",
    "openpyxl>=3.1.5",
    "pandas>=2.1.4,<3.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pyhwpx>=1.6.6",
    "pytesseract>=0.3.13",
    "pywin32>=311",
]
